--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </nav>
       <h1>Разработчик веб-сайта "частично веб-дизайнер</h1>
       <img src="https://adonius.club/uploads/posts/2022-05/1653055823_64-adonius-club-p-oboi-programmirovanie-krasivie-79.jpg" width="830px" height="550px"/>
-      <a href="советы"> два совета начинающим веб-разроботчикам</a>
+      <a href="sov"> два совета начинающим веб-разроботчикам</a>
       <p></p>
       <a href="Мой любимый проект">Мой любимый проект</a>
     </main>
