--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
       <p></p>
       <a href="Мой любимый проект">Мой любимый проект</a>
     </main>
-    <footer>
-      <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
-    </footer>
+<footer>
+    <img src="https://i.pinimg.com/originals/13/8d/52/138d52a8f429510e2c16bd67990dae3c.jpg"/>
+<h3>Мой дискорд:EEYT#0402</h3>
+</footer>
   </body>
 </html>
