--- a/leonov.html
+++ b/leonov.html
@@ -21,10 +21,9 @@
 <img src="https://narisyu.cdnbro.com/posts/48486745-dzhek-london-portret-1.jpg"width="150px" height="150px"/>
 <img src="http://cache3.youla.io/files/images/780_780/5b/e9/5be93cd0e7696a1454698af4.jpg"width="150px" height="150px"/>
     </main>
-    <footer>
-      <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
-    </footer>
+<footer>
+    <img src="https://i.pinimg.com/originals/13/8d/52/138d52a8f429510e2c16bd67990dae3c.jpg"/>
+<h3>Мой дискорд:EEYT#0402</h3>
+</footer>
   </body>
 </html>
