--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="Мой любимый проект">Мой любимый проект</a>
     </main>
 <footer>
-    <img src="https://i.pinimg.com/originals/13/8d/52/138d52a8f429510e2c16bd67990dae3c.jpg"/>
+    <img src="https://i.pinimg.com/originals/13/8d/52/138d52a8f429510e2c16bd67990dae3c.jpg"width="100px" height="100px"/>
 <h3>Мой дискорд:EEYT#0402</h3>
 </footer>
   </body>
