--- a/советы.html
+++ b/советы.html
@@ -14,10 +14,9 @@
 <p></p>
   <h3> 2. Умейте быстро находить решения
 Умение самостоятельно решать проблемы – один из самых важных навыков разработчика. Вы можете подумать, что опытные программисты знают ответы на все вопросы. Это совсем не так! Они могут знать некоторые вещи наизусть, но есть многое все-таки ищут в Google. Если вначале на поиск ответов вам может понадобиться 3 часа, то в следующий раз на это уйдет гораздо меньше времени. Научившись исправлять наиболее часто встречающиеся проблемы вы станете более быстрым и эффективным.</h3>
-    <footer>
-      <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
-    </footer>
+<footer>
+    <img src="https://i.pinimg.com/originals/13/8d/52/138d52a8f429510e2c16bd67990dae3c.jpg"width="100px" height="100px"/>
+<h3>Мой дискорд:EEYT#0402</h3>
+</footer>
   </body>
 </html>
