--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
       <nav>
         <a class="link-nav" href="mysites.html"><b>моя любимая работа,</b></a>
-        <a class="link-nav" href="info.html"><b>советы для начинающих</b></a>
+        <a class="link-nav" href="sov.html"><b>советы для начинающих</b></a>
       </nav>
       <h1>Разработчик веб-сайта "частично веб-дизайнер</h1>
       <img src="https://adonius.club/uploads/posts/2022-05/1653055823_64-adonius-club-p-oboi-programmirovanie-krasivie-79.jpg" width="830px" height="550px"/>
