--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="mysites.html"><b>моя любимая работа,</b></a>
-        <a class="link-nav" href="sov.html"><b>советы для начинающих</b></a>
+        <a class="link-nav" href="mysites.html"><b>моя Мой любимый проект<,</b></a>
+        <p></p>
+        <a class="link-nav" href="sov.html"><b>два совета начинающим веб-разроботчикам</b></a>
       </nav>
       <h1>Разработчик веб-сайта "частично веб-дизайнер</h1>
-      <img src="https://adonius.club/uploads/posts/2022-05/1653055823_64-adonius-club-p-oboi-programmirovanie-krasivie-79.jpg" width="830px" height="550px"/>
-      <a href="sov"> два совета начинающим веб-разроботчикам</a>
-      <p></p>
-      <a href="Мой любимый проект">Мой любимый проект</a>
+      <img src="https://adonius.club/uploads/posts/2022-05/1653055823_64-adonius-club-p-oboi-programmirovanie-krasivie-79.jpg" width="830px" height="550px"/>  
     </main>
     </body>
 <footer>
