--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="mysites.html"><b>моя Мой любимый проект<,</b></a>
+        <a href "http://minecraft.eeyt.tilda.ws">моя Мой любимый проект</a>
         <p></p>
         <a class="link-nav" href="sov.html"><b>два совета начинающим веб-разроботчикам</b></a>
       </nav>
