--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Red_Dragon</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
-  <body>
+  <body class=tik>
     <header>
       <a class="link-header" href="leonov.html">обо мне</a>
     </header>
