--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p></p>
         <a class="link-nav" href="sov.html"><b>два совета начинающим веб-разроботчикам</b></a>
       </nav>
-      <h1>Разработчик веб-сайта "частично веб-дизайнер</h1>
+      <h1>Разработчик веб-сайта "частично веб-дизайнер"</h1>
       <img src="https://adonius.club/uploads/posts/2022-05/1653055823_64-adonius-club-p-oboi-programmirovanie-krasivie-79.jpg" width="830px" height="550px"/>  
     </main>
     </body>
