--- a/leonov.html
+++ b/leonov.html
@@ -3,7 +3,7 @@
     <title>Обо мне</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
-  <body>
+  <body class=tik>
     <header>
       <a class="link-header" href="index.html">Главная</a>
     </header>
