--- a/sov.html
+++ b/sov.html
@@ -4,7 +4,7 @@
     <title>My Sites</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
-  <body>
+  <body class=tik>
     <header>
       <a class="link-header" href="index.html">Главная</a>
     </header>
